# FunnyPineappleBot

./: .gitignore  Dockerfile  FunnyPineappleBot.sample.service  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  samples.txt  setup.py  test.py
handlers/: __init__.py  all.py  ananas_only.py  config.py  gen.py  generate.py  gif.py  img.py  leave.py  member.py  middleware.py  msg.py  on_message.py  pin.py  poll.py  system.py
shared/: __init__.py  commands.py  config.py  config.sample.py  database.py  instances.py  samples.py  settings.py
utils/: __init__.py  filters.py
